--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,7 +1,12 @@
 .page {
   max-width: 1280px;
-  font-family: "Inter";
   color: #fff;
   background-color: black;
   margin: 0 auto;
+  padding: 45px 0 0;
+}
+
+.page__content {
+  margin: 0 200px;
+  max-width: 880px;
 }
