--- a/blocks/card.css
+++ b/blocks/card.css
@@ -32,7 +32,7 @@
   font-family: "Inter", sans-serif;
   font-weight: 900;
   font-size: 24px;
-  line-height: 29px;
+  line-height: 1.2;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -42,4 +42,8 @@
   width: 21px;
   height: 18px;
   cursor: pointer;
+}
+
+.card__heart-icon:hover {
+  opacity: 50%;
 }
