--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,6 +7,6 @@
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.2;
   margin: 0;
 }
