--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -22,7 +22,7 @@
   font-family: "Inter", sans-serif;
   font-weight: 500;
   font-size: 42px;
-  line-height: 48px;
+  line-height: 1.1;
   margin: 0;
   grid-area: "title";
   overflow: hidden;
@@ -41,6 +41,10 @@
   cursor: pointer;
 }
 
+.profile__edit-button:hover {
+  opacity: 60%;
+}
+
 .profile__subtitle {
   margin: 7px 0 0;
   padding: 0;
@@ -48,7 +52,7 @@
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 21.78px;
+  line-height: 1.2;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -64,9 +68,22 @@
   cursor: pointer;
 }
 
+.profile__add-button:hover {
+  opacity: 60%;
+}
+
 @media screen and (max-width: 795px) {
+  .profile__info {
+    align-items: center;
+  }
+
   .profile__title {
     font-size: 24px;
+    line-height: 1.2;
+  }
+
+  .profile__edit-button {
+    margin: 0 18px 0;
   }
 }
 
@@ -93,7 +110,7 @@
 
   .profile__title {
     font-size: 22px;
-    line-height: 27px;
+    line-height: 1.2;
   }
 
   .profile__edit-button {
@@ -104,7 +121,7 @@
 
   .profile__subtitle {
     font-size: 14px;
-    line-height: 17px;
+    line-height: 1.2;
     display: block;
   }
 
