--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -24,7 +24,7 @@
   font-size: 42px;
   line-height: 1.1;
   margin: 0;
-  grid-area: "title";
+  grid-area: title;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -37,7 +37,7 @@
   height: 24px;
   padding: 0;
   margin: 15px 18px 0;
-  grid-area: "button";
+  grid-area: button;
   cursor: pointer;
 }
 
@@ -48,7 +48,7 @@
 .profile__subtitle {
   margin: 7px 0 0;
   padding: 0;
-  grid-area: "subtitle";
+  grid-area: subtitle;
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 18px;
