--- a/blocks/card.css
+++ b/blocks/card.css
@@ -4,17 +4,19 @@
   margin: 0;
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .card__image {
   width: 282px;
   height: 282px;
-  border-radius: 10px 10px 0 0;
   margin: 0;
+  object-fit: cover;
 }
 
 .card__info {
-  width: 282px;
+  max-width: 282px;
   background-color: white;
   color: black;
   margin: 0;
@@ -23,13 +25,13 @@
   align-items: center;
   padding: 25px 20px;
   box-sizing: border-box;
-  border-radius: 0 0 10px 10px;
 }
 
 .card__title {
   margin: 0;
   padding: 0;
-  font-family: "Inter", sans-serif;
+  max-width: 219px;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.2;
@@ -39,6 +41,8 @@
 }
 
 .card__heart-icon {
+  background: url(../images/heart.svg) center no-repeat;
+  border: none;
   width: 21px;
   height: 18px;
   cursor: pointer;
