--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -7,8 +7,9 @@
   grid-gap: 20px 17px;
 }
 
-@media screen and (max-width: 636px) {
+@media screen and (max-width: 634px) {
   .cards {
     margin: 36px 0 0;
+    padding: 0 19px 0;
   }
 }
