--- a/blocks/page.css
+++ b/blocks/page.css
@@ -11,8 +11,8 @@
   max-width: 880px;
 }
 
-@media screen and (max-width: 636px) {
+@media screen and (max-width: 634px) {
   .page {
-    padding: 28px 19px 36px;
+    padding: 28px 0 36px;
   }
 }
