--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,8 +5,7 @@
 }
 
 .profile__avatar {
-  width: 120px;
-  height: 120px;
+  object-fit: cover;
   border-radius: 50%;
   margin: 0 30px 0 0;
 }
@@ -19,7 +18,8 @@
 }
 
 .profile__title {
-  font-family: "Inter", sans-serif;
+  max-width: 400px;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 42px;
   line-height: 1.1;
@@ -46,10 +46,11 @@
 }
 
 .profile__subtitle {
+  max-width: 400px;
   margin: 7px 0 0;
   padding: 0;
   grid-area: subtitle;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.2;
@@ -87,11 +88,12 @@
   }
 }
 
-@media screen and (max-width: 636px) {
+@media screen and (max-width: 634px) {
   .profile {
     flex-direction: column;
     max-width: 400px;
     margin: 42px auto 0;
+    padding: 0 19px 0;
   }
 
   .profile__avatar {
@@ -109,6 +111,7 @@
   }
 
   .profile__title {
+    max-width: 222px;
     font-size: 22px;
     line-height: 1.2;
   }
@@ -120,6 +123,7 @@
   }
 
   .profile__subtitle {
+    max-width: 282px;
     font-size: 14px;
     line-height: 1.2;
     display: block;
