--- a/blocks/card.css
+++ b/blocks/card.css
@@ -48,6 +48,10 @@
   cursor: pointer;
 }
 
+.card__heart-icon_active {
+  background-image: url(../images/heart-icon-active.svg);
+}
+
 .card__heart-icon:hover {
   opacity: 50%;
 }
