--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 }
 
 .card__image {
@@ -13,6 +14,21 @@
   height: 282px;
   margin: 0;
   object-fit: cover;
+}
+
+.card__delete-icon {
+  position: absolute;
+  top: 18px;
+  right: 15px;
+  background: url(../images/delete-icon.svg) center no-repeat;
+  border: none;
+  width: 18px;
+  height: 19.3px;
+  cursor: pointer;
+}
+
+.card__delete-icon:hover {
+  opacity: 60%;
 }
 
 .card__info {
