--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -16,6 +16,28 @@
   display: flex;
 }
 
+.modal__picture-container {
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+.modal__picture {
+  margin: 0 0 10px;
+  padding: 0;
+  max-width: 75vw;
+  max-height: 75vh;
+}
+
+.modal__picture-caption {
+  color: #fff;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.2;
+  margin: 0;
+}
+
 .modal__container {
   padding: 34px;
   background-color: #fff;
@@ -103,6 +125,14 @@
     position: absolute;
     top: -45px;
     right: 7px;
+  }
+
+  .modal__close_picture {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: -35px;
+    right: -35px;
   }
 
   .modal__heading {
