--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,5 +1,8 @@
 .modal {
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.6s linear, visibility 0s 0.6s;
   padding: 0 19px;
   position: fixed;
   top: 0;
@@ -13,7 +16,9 @@
 }
 
 .modal_opened {
-  display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.6s;
 }
 
 .modal__picture-container {
