--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -119,6 +119,12 @@
   opacity: 0.8;
 }
 
+.modal__form-button_disabled {
+  color: rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+}
+
 @media screen and (max-width: 634px) {
   .modal__container {
     padding: 25px 22px;
