--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -47,7 +47,6 @@
   padding: 34px;
   background-color: #fff;
   border-radius: 10px;
-  position: relative;
 }
 
 .modal__heading {
@@ -83,9 +82,21 @@
   padding: 0;
 }
 
-.modal__form-input {
+.modal__label {
+  display: inline-block;
   width: 100%;
   margin: 0 0 30px;
+  padding: 0;
+  position: relative;
+}
+
+.modal__label:last-child {
+  margin: 0;
+}
+
+.modal__form-input {
+  width: 100%;
+  margin: 0;
   padding: 0 0 13px;
   border-style: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -98,6 +109,17 @@
 
 .modal__form-input:last-child {
   margin: 0;
+}
+
+.modal__error {
+  width: 100%;
+  color: #ff0000;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 12px;
+  line-height: 1.2;
+  position: absolute;
+  top: calc(100% + 5px);
+  left: 0px;
 }
 
 .modal__form-button {
